# citrus

./: .gitignore  BUGS.md  Cargo.toml  FLUX-ARCHITECTURE.md  Features.md  LICENSE  README.md  SCREEN_SPACE_GI.md  TODO.md  project.citrus
.claude/workflows/: deep-research.js
crates/citrus/: Cargo.toml
crates/citrus-assets/: Cargo.toml  build.rs
crates/citrus-assets/src/: asset_meta.rs  bake_file.rs  fbx_loader.rs  gltf_loader.rs  lib.rs  lightmap_uv.rs  material_file.rs  post_file.rs  procedural.rs  project_file.rs  scene_file.rs  shader_file.rs  skeleton.rs  tex_cache.rs
crates/citrus-core/: Cargo.toml
crates/citrus-core/src/: ik.rs  input.rs  lib.rs  models.rs  vr.rs
crates/citrus-editor/: Cargo.toml
crates/citrus-editor/assets/: citrus-purple.tmTheme
crates/citrus-editor/src/: code_editor.rs  components.rs  file_browser.rs  inspector.rs  lib.rs  scene_panel.rs  sections.rs  vim.rs
crates/citrus-engine/: Cargo.toml
crates/citrus-engine/examples/: gi_preview.rs
crates/citrus-engine/src/: anim_graph.rs  asset_handle.rs  audio.rs  audio_mixer.rs  bundle.rs  camera.rs  crash.rs  editor_app.rs  events.rs  gizmo.rs  humanoid.rs  icon.rs  input_engine.rs  lib.rs  localization.rs  lod.rs  log_capture.rs  lsp.rs  navmesh.rs  net.rs  particles.rs  physics.rs  plugins.rs  prefab.rs  realtime_gi.rs  runtime.rs  savegame.rs  scene.rs  shader_graph.rs  shaders.rs  splash.rs  streaming.rs  sw_gi.rs  tasks.rs  ui_canvas.rs  undo.rs  voice.rs
crates/citrus-render/: Cargo.toml  build.rs
crates/citrus-render/shaders/: bake_gbuffer.frag  bake_gbuffer.vert  bake_lightmap.comp  bake_probe.comp  error.frag  flux_common.glsl  flux_denoise.comp  flux_integrate.comp  fullscreen.vert  outline.frag  outline.vert  post.frag  rt_reflect.comp  screen_gi.comp  screen_gi_rt.comp  shadow.vert  skybox.frag  skybox.vert  ssr_resolve.frag  standard.frag  standard.vert  sw_gi.comp  vr_quad.frag  vr_quad.vert
crates/citrus-render/src/: alloc.rs  bake.rs  context.rs  frame.rs  gpu_gi.rs  lib.rs  pipeline.rs  post.rs  profiler_window.rs  rt_reflect.rs  sdf.rs  ssr.rs  swapchain.rs  texture.rs  types.rs  vr_overlay.rs
crates/citrus-xr/: Cargo.toml
crates/citrus-xr/src/: lib.rs
crates/citrus/src/: main.rs
docs/: components.md  shaders.md
examples/sample-game/: Cargo.toml
examples/sample-game/src/: main.rs
extracted/damagedhelmet/materials/: default.material  material_mr.material  material_mr_copy.material
extracted/leisure_area/materials/: default.material
extracted/modern_glass_table/materials/: color1.material  glass.material
extracted/scene/materials/: default.material  material_0.material
materials/: blobby.material  brushed_metal.material  chrome_mirror.material  default.material  default_1.material  default_copy.material  emissive_core.material  emissive_core_copy.material  floor.material  glass.material  glass_panel.material  material_0.material  shinyball.material  toon_sphere.material  toon_sphere_1.material
models/: DamagedHelmet.lmuv  leisure_area.FBX  modern_glass_table.glb
models/modern_gray_sofa__3d_model/: license.txt  scene.gltf
plugins/components/: Cargo.toml
plugins/components/src/: lib.rs
scenes/: effects.postfx  world.lightdata  world.lightmap  world.reflprobe  world.scene  world_copy.scene
shaders/: new_shader.frag  toon.frag
