[workspace]
resolver = "2"
# plugins/*: user component crates, built & hot-loaded by the editor. Being
# workspace members keeps their dependency versions identical to the
# editor's, which is what makes sharing `dyn Component` across the dylib
# boundary safe in practice.
members = ["crates/*", "plugins/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# graphics
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
winit = "0.30"

gpu-allocator = "0.28"
bytemuck = { version = "1", features = ["derive"] }

# core
hecs = "0.10"
glam = { version = "0.30", features = ["mint"] }
serde = { version = "1", features = ["derive"] }
ron = "0.10"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# gui (egui pinned to 0.33: latest supported by egui-ash-renderer)
egui = "0.33"
# "syntect" upgrades syntax highlighting to full grammars (Rust, GLSL, …).
egui_extras = { version = "0.33", default-features = false, features = ["syntect"] }
egui-winit = { version = "0.33", default-features = false }
egui-ash-renderer = { version = "0.11", features = ["gpu-allocator", "dynamic-rendering"] }
transform-gizmo-egui = "0.8" # 0.9 needs egui 0.34
egui_dock = "0.18"           # 0.19 needs egui 0.34

# assets
gltf = { version = "1.4", features = ["KHR_materials_emissive_strength"] }
ufbx = "0.11"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tga"] }

openxr = "0.21"
libloading = "0.8"
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Audio playback + decoding (.wav/.flac/.mp3 via the default decoders).
rodio = "0.19"
libc = "0.2"

# internal crates
citrus-engine = { path = "crates/citrus-engine" }
citrus-render = { path = "crates/citrus-render" }
citrus-xr = { path = "crates/citrus-xr" }
citrus-assets = { path = "crates/citrus-assets" }
citrus-editor = { path = "crates/citrus-editor" }

[profile.dev]
# Vulkan bootstrap is slow in pure debug; optimize deps but keep our code debuggable.
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
