[package]
name = "citrus-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
citrus-render.workspace = true
citrus-assets.workspace = true
citrus-editor.workspace = true
winit.workspace = true
egui.workspace = true
egui-winit.workspace = true
transform-gizmo-egui.workspace = true
egui_dock.workspace = true
hecs.workspace = true
glam.workspace = true
image.workspace = true
libloading.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
