[package]
name = "citrus-project-components"
version = "0.1.0"
edition = "2024"

[lib]
# cdylib: hot-loaded by the editor. rlib: statically linked into a bundled
# game's binary (no dylib shipped) — both produced from one build.
crate-type = ["cdylib", "rlib"]

[features]
# The editor builds plugins with `--features editor` (inspector + gizmo + egui);
# a shipped game builds without it, so the editor crate and egui never link in.
default = []
editor = ["dep:citrus-editor", "dep:egui"]

[dependencies]
citrus-core.workspace = true
citrus-editor = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
serde.workspace = true
glam.workspace = true
